Cleaned up code smells

--- a/src/ContextualWebSearchClient/ContextualWebSearchClient.csproj
+++ b/src/ContextualWebSearchClient/ContextualWebSearchClient.csproj
@@ -5,7 +5,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Interfaces\" />
+		<Compile Remove="ContextualHttpClient.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="../ContextualWebSearchClient.Core/ContextualWebSearchClient.Core.csproj" />
 	</ItemGroup>
 
 </Project>
