--- a/src/ContextualWebSearchClient/ContextualWebSearchClient.csproj
+++ b/src/ContextualWebSearchClient/ContextualWebSearchClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net5</TargetFramework>
@@ -6,6 +6,10 @@
 
 	<ItemGroup>
 		<Compile Remove="ContextualHttpClient.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
