--- a/tests/ContextualWebSearchClient.Tests/ContextualWebSearchClient.Tests.csproj
+++ b/tests/ContextualWebSearchClient.Tests/ContextualWebSearchClient.Tests.csproj
@@ -21,6 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FluentAssertions" Version="5.10.3" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
 		<PackageReference Include="xunit" Version="2.4.1" />
